apps/yana-stocks/api-docs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-docs
  namespace: yana-stocks
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://ak-outpost-api-docs.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "https://api-docs.yanatech.co.uk/outpost.goauthentik.io/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Original-URL $scheme://$http_host$request_uri;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-docs.yanatech.co.uk
      secretName: wildcard-yanatech-tls
  rules:
    - host: api-docs.yanatech.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-docs
                port:
                  number: 80
